load("//:painty.bzl", "painty_cc_library", "painty_cc_test")

painty_cc_library(
    name = "io",
    srcs = glob(["src/*.cpp"]),
    hdrs = glob(["*.h"]),
    visibility = ["//visibility:public"],
    deps = [
        "//3rdParty:opencv",
        "//painty/core:core",
        "//painty/image:image",
    ],
)

painty_cc_test(
    name = "test",
    srcs = glob(["test/src/*.cpp"]),
    deps = [
        ":io",
        "@gtest",
    ],
)
