load("//:painty.bzl", "painty_cc_library", "painty_cc_test")

painty_cc_library(
    name = "painty_io",
    srcs = glob(["src/*.cxx"]),
    hdrs = glob(["*.hxx"]),
    visibility = ["//visibility:public"],
    deps = [
        "//3rdParty:opencv",
        "//painty/core:painty_core",
        "//painty/image:painty_image",
    ],
)

painty_cc_test(
    name = "test",
    srcs = glob(["test/src/*.cxx"]),
    deps = [
        ":painty_io",
        "@gtest",
    ],
)
