load("//:painty.bzl", "painty_cc_library", "painty_cc_test")

painty_cc_library(
    name = "renderer",
    srcs = glob(["src/*.cpp"]),
    hdrs = glob(["*.h"]),
    visibility = ["//visibility:public"],
    deps = [
        "//painty/core:core",
        "//painty/image:image",
        "//painty/io:io"
    ],
)

painty_cc_test(
    name = "test",
    srcs = glob(["test/src/*.cpp"]),
    deps = [
        ":renderer",
        "@gtest",
        "//painty/io:io",
    ],
    data = ["//data:exported_texture_sample_0", "//data:exported_footprint"]
)
