load("//:painty.bzl", "painty_cc_library", "painty_cc_test")

painty_cc_library(
    name = "painty_renderer",
    srcs = glob(["src/*.cxx"]),
    hdrs = glob(["*.hxx"]),
    data = [
        "//data:canvas_patterns"
        "//data:exported_footprint",
        "//data:exported_texture_sample_0",
        "//painty/renderer/shaders",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//painty/core:painty_core",
        "//painty/image:painty_image",
        "//painty/io:painty_io"
    ],
)

painty_cc_test(
    name = "test",
    srcs = glob(["test/src/*.cxx"]),
    deps = [
        ":painty_renderer",
        "//painty/io:painty_io",
        "@gtest",
    ],
)
